apps/radarr/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-ingress
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.${DOMAIN}`) && PathPrefix(`/outpost.goauthentik.io/`)
      kind: Rule
      services:
        - name: authentik-server
          namespace: auth
          port: http
    - match: Host(`radarr.${DOMAIN}`)
      kind: Rule
      services:
        - name: radarr
          port: 7878
      middlewares:
        - name: authentik
          namespace: traefik
